# kaggle

./: .gitignore  README.md  pyproject.toml
digit_recongnizer/: main.ipynb
dog_and_cat/: main.ipynb  notebook3c30ff3303.ipynb
dog_breed_identification/: main.ipynb
titanic/: main.ipynb
